--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: AI Conference Deadlines # (Maintained by @abhshkdz)
 description: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines
 author: Abhishek Das
 
-baseurl: "http://dgyblog.com/ai-deadlines/"
+baseurl: "http://dgyblog.com/ai-deadlines"
 
 twitter_username: duguyue100
 twitter_hashtag: machinelearning
