--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,6 +1,16 @@
 
 ---
 
+- name: ISCAS
+  year: 2019
+  id: iscas19
+  link: https://www.iscas2019.org/
+  deadline: "2018-10-15 23:59:59"
+  timezone: Etc/GMT+10
+  date: May 26 - May 29, 2019
+  place: Sapporo, Japan
+  sub: SP
+
 - name: AAAI
   year: 2019
   id: aaai19
