update domain name

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: AI Conference Deadlines # (Maintained by @abhshkdz)
 description: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines
 author: duguyue100
 
+domain: "https://dgyblog.com/ai-deadlines"
 baseurl: "https://dgyblog.com/ai-deadlines"
 
 twitter_username: duguyue100
