--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Countdowns to top CV/NLP/ML/Robotics/AI conference deadlines
 author: duguyue100
 
 domain: "dgyblog.com/ai-deadlines/"
-baseurl: ""
+baseurl: "/ai-deadlines"
 
 twitter_username: duguyue100
 twitter_hashtag: machinelearning
