--- a/_data/types.yml
+++ b/_data/types.yml
@@ -3,7 +3,7 @@
   sub: ML
 - name: Computer Vision
   sub: CV
-- name: Natural Language Processing
+- name: NLP
   sub: NLP
 - name: Robotics
   sub: RO
