--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -55,10 +55,10 @@
   year: 2019
   id: iclr19
   link: http://iclr.cc/
-  deadline: TBA
-  timezone: America/Los_Angeles
-  date: TBA
-  place: TBA
+  deadline: "2018-09-27 17:00:00"
+  timezone: EST
+  date: Apr 30 - May 03, 2019
+  place: New Orleans, USA
   sub: ML
 
 - name: ICML
