--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -91,6 +91,16 @@
   place: Seoul, Korea
   sub: CV
 
+- name: IJCAI
+  year: 2019
+  id: ijcai19
+  link: https://ijcai19.org/
+  deadline: "2019-02-25 23:59:59"
+  timezone: America/Los_Angeles
+  date: Aug 10-16, 2019
+  place: Macao, China
+  sub: ML
+
 - name: SIGGRAPH
   year: 2019
   id: siggraph19
@@ -100,16 +110,6 @@
   date: TBA
   place: TBA
   sub: CV
-
-- name: IJCAI
-  year: 2019
-  id: ijcai19
-  link:
-  deadline: TBA
-  timezone: TBA
-  date: TBA
-  place: TBA
-  sub: ML
 
 - name: AAAI
   year: 2019
