--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -51,6 +51,56 @@
   place: Long Beach, California
   sub: CV
 
+- name: COLT
+  year: 2019
+  id: colt19
+  link: http://learningtheory.org/colt2019/
+  deadline: "2019-02-01 23:59:59"
+  timezone: America/Los_Angeles
+  date: June 25-28, 2019
+  place: Phoenix, AZ
+  sub: ML
+
+- name: IJCNN
+  year: 2019
+  id: ijcnn19
+  link: https://www.ijcnn.org/
+  deadline: "2018-12-15 23:59:59"
+  timezone: America/Los_Angeles
+  date: July 14-19, 2019
+  place: Budapest, Hungary
+  sub: ML
+
+- name: KDD
+  year: 2019
+  id: kdd19
+  link: http://www.kdd.org/kdd2019/
+  deadline: TBD
+  timezone: America/Los_Angeles
+  date: August 3-7, 2018
+  place: Anchorage, Alaska
+  sub: ML
+
+- name: Interspeech
+  year: 2019
+  id: interspeech2019
+  link: http://interspeech2019.org/
+  deadline: "2019-03-29 23:59:59"
+  timezone: Etc/GMT
+  date: September 15-19, 2019
+  place: Graz, Austria
+  sub: SP
+
+- name: ICIP
+  year: 2019
+  id: icip19
+  link: http://2019.ieeeicip.org/
+  deadline: "2019-01-31 23:59:59"
+  timezone: America/Los_Angeles
+  date: September 22-25, 2019
+  place: Taipei, Taiwan
+  sub: CV
+
 - name: ICCV
   year: 2019
   id: iccv19
