--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -75,7 +75,7 @@
   year: 2019
   id: kdd19
   link: http://www.kdd.org/kdd2019/
-  deadline: TBD
+  deadline: TBA
   timezone: America/Los_Angeles
   date: August 3-7, 2018
   place: Anchorage, Alaska
