--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,34 +1,5 @@
 
 ---
-- name: IROS
-  year: 2019
-  id: iros2019
-  link: https://www.iros2019.org/
-  deadline: "2019-03-01 23:59:59"
-  timezone: PST
-  date: November 3-8, 2019
-  place: The Venetian Macao, Macau, China
-  sub: RO
-  
-- name: ICASSP
-  year: 2019
-  id: icassp2019
-  link: http://icassp2019.com/
-  deadline: "2018-10-29 23:59:59"
-  timezone: Etc/GMT
-  date: May 12-17, 2019
-  place: Brighton, UK
-  sub: SP
-
-- name: ESANN
-  year: 2019
-  id: esann19
-  link: https://www.elen.ucl.ac.be/esann/index.php?pg=welcome
-  deadline: "2018-11-19 23:59:59"
-  timezone: EST
-  date: April 24-26, 2019
-  place: Bruges, Belgium
-  sub: ML
 
 - name: ICML
   year: 2019
@@ -40,24 +11,14 @@
   place: Long Beach Convention Center, Long Beach, USA
   sub: ML
 
-- name: ACL
+- name: ICIP
   year: 2019
-  id: acl19
-  link: http://acl2019.org/
-  deadline: "2019-03-04 23:59:59"
-  timezone: Etc/GMT+12
-  date: July 28-August 2, 2019
-  place: Florence, Italy
-  sub: NLP
-
-- name: CVPR
-  year: 2019
-  id: cvpr19
-  link: http://cvpr2019.thecvf.com/
-  deadline: "2018-11-16 23:59:59"
+  id: icip19
+  link: http://2019.ieeeicip.org/
+  deadline: "2019-01-31 23:59:59"
   timezone: America/Los_Angeles
-  date: June 15-21, 2019
-  place: Long Beach, California
+  date: September 22-25, 2019
+  place: Taipei, Taiwan
   sub: CV
 
 - name: COLT
@@ -70,55 +31,15 @@
   place: Phoenix, AZ
   sub: ML
 
-- name: IJCNN
-  year: 2019
-  id: ijcnn19
-  link: https://www.ijcnn.org/
-  deadline: "2018-12-15 23:59:59"
-  timezone: America/Los_Angeles
-  date: July 14-19, 2019
-  place: Budapest, Hungary
-  sub: ML
-
 - name: KDD
   year: 2019
   id: kdd19
   link: http://www.kdd.org/kdd2019/
-  deadline: TBA
+  deadline: "2019-02-03 23:59:59"
   timezone: America/Los_Angeles
   date: August 3-7, 2018
   place: Anchorage, Alaska
   sub: ML
-
-- name: Interspeech
-  year: 2019
-  id: interspeech2019
-  link: http://interspeech2019.org/
-  deadline: "2019-03-29 23:59:59"
-  timezone: Etc/GMT
-  date: September 15-19, 2019
-  place: Graz, Austria
-  sub: SP
-
-- name: ICIP
-  year: 2019
-  id: icip19
-  link: http://2019.ieeeicip.org/
-  deadline: "2019-01-31 23:59:59"
-  timezone: America/Los_Angeles
-  date: September 22-25, 2019
-  place: Taipei, Taiwan
-  sub: CV
-
-- name: ICCV
-  year: 2019
-  id: iccv19
-  link: http://iccv2019.thecvf.com/
-  deadline: "2019-03-22 23:59:59"
-  timezone: America/Los_Angeles
-  date: Oct 27-Nov 3, 2019
-  place: Seoul, Korea
-  sub: CV
 
 - name: IJCAI
   year: 2019
@@ -130,14 +51,54 @@
   place: Macao, China
   sub: ML
 
-- name: SIGGRAPH
+- name: IROS
   year: 2019
-  id: siggraph19
-  link: 
-  deadline: TBA
-  timezone: TBA
-  date: TBA
-  place: TBA
+  id: iros2019
+  link: https://www.iros2019.org/
+  deadline: "2019-03-01 23:59:59"
+  timezone: PST
+  date: November 3-8, 2019
+  place: The Venetian Macao, Macau, China
+  sub: RO
+
+- name: ACL
+  year: 2019
+  id: acl19
+  link: http://acl2019.org/
+  deadline: "2019-03-04 23:59:59"
+  timezone: Etc/GMT+12
+  date: July 28-August 2, 2019
+  place: Florence, Italy
+  sub: NLP
+
+- name: ICCV
+  year: 2019
+  id: iccv19
+  link: http://iccv2019.thecvf.com/
+  deadline: "2019-03-15 23:59:59"
+  timezone: America/Los_Angeles
+  date: Oct 27-Nov 3, 2019
+  place: Seoul, Korea
+  sub: CV
+
+- name: Interspeech
+  year: 2019
+  id: interspeech2019
+  link: http://interspeech2019.org/
+  deadline: "2019-03-29 23:59:59"
+  timezone: Etc/GMT
+  date: September 15-19, 2019
+  place: Graz, Austria
+  sub: SP
+
+- name: BMVC
+  year: 2019
+  id: bmvc2019
+  link: http://bmvc2019.org/
+  deadline: "2019-04-29 23:59:59"
+  timezone: Pacific Standard Time
+  date: September 09-12, 2019
+  place: Cardiff University
   sub: CV
 
 - name: AAAI
@@ -160,95 +121,15 @@
   place: Montreal, Canada
   sub: RO
 
-- name: AAMAS
-  year: 2018
-  id: aamas18
-  link: http://celweb.vuse.vanderbilt.edu/aamas18
-  deadline: "2017-11-14 23:59:00"
-  timezone: Etc/GMT+12
-  date: July 11-13, 2018
-  place: Stockholm, Sweden
-  sub: ML
-
-- name: RSS
-  year: 2018
-  id: rss18
-  link: http://www.roboticsconference.org/
-  deadline: "2018-02-01 23:59:59"
-  timezone: Etc/GMT+12
-  date: June 26-30, 2018
-  place: Pittsburgh, Pennsylvania, USA
-  sub: RO
-
-- name: IROS
-  year: 2018
-  id: iros2018
-  link: https://www.iros2018.org/
-  deadline: "2018-03-01 23:59:59"
-  timezone: CET
-  date: October 1-5, 2018
-  place: Madrid, Spain
-  sub: RO
-
-- name: Interspeech
-  year: 2018
-  id: interspeech18
-  link: http://interspeech2018.org/
-  deadline: "2018-03-23 23:59:59"
-  timezone: Etc/GMT
-  date: September 2-6, 2018
-  place: Hyderabad, India
-  sub: SP
-
-- name: BMVC
-  year: 2018
-  id: bmvc2018
-  link: http://bmvc2018.org/
-  deadline: "2018-05-07 23:59:59"
-  timezone: America/Los_Angeles
-  date: September 03-06, 2018
-  place: Newcastle upon Tyne
-  sub: CV
-
-- name: NIPS
-  year: 2018
-  id: nips18
-  link: https://nips.cc/Conferences/2018
-  deadline: "2018-05-18 13:00:00"
-  timezone: America/Los_Angeles
-  date: December 3-8, 2018
-  place: "Palais des Congr\xE8s de Montr\xE9al, Montr\xE9al, Canada"
-  sub: ML
-
-- name: ICDM
-  year: 2018
-  id: icdm2018
-  link: http://icdm2018.org/
-  deadline: "2018-06-05 23:59:59"
-  timezone: Etc/GMT-7
-  date: November 17-20, 2018
-  place: Singapore
-  sub: ML
-
-- name: CoRL
-  year: 2018
-  id: corl2018
-  link: http://www.robot-learning.org/
-  deadline: "2018-06-15 17:00:00"
-  timezone: America/Los_Angeles
-  date: October 29-31, 2018
-  place: Zurich, Switzerland
-  sub: RO
-
-- name: ISCAS
+- name: ICLR
   year: 2019
-  id: iscas19
-  link: https://www.iscas2019.org/
-  deadline: "2018-10-15 23:59:59"
-  timezone: Etc/GMT+10
-  date: May 26 - May 29, 2019
-  place: Sapporo, Japan
-  sub: SP
+  id: iclr19
+  link: http://iclr.cc/
+  deadline: "2018-09-27 17:00:00"
+  timezone: EST
+  date: Apr 30 - May 03, 2019
+  place: New Orleans, USA
+  sub: ML
 
 - name: AISTATS
   year: 2019
@@ -260,13 +141,92 @@
   place: Naha, Okinawa, Japan
   sub: ML
 
-- name: ICLR
+- name: ISCAS
   year: 2019
-  id: iclr19
-  link: http://iclr.cc/
-  deadline: "2018-09-27 17:00:00"
-  timezone: EST
-  date: Apr 30 - May 03, 2019
-  place: New Orleans, USA
+  id: iscas19
+  link: https://www.iscas2019.org/
+  deadline: "2018-10-15 23:59:59"
+  timezone: Etc/GMT+10
+  date: May 26 - May 29, 2019
+  place: Sapporo, Japan
+  sub: SP
+
+- name: ICASSP
+  year: 2019
+  id: icassp2019
+  link: http://icassp2019.com/
+  deadline: "2018-10-29 23:59:59"
+  timezone: Etc/GMT
+  date: May 12-17, 2019
+  place: Brighton, UK
+  sub: SP
+
+- name: AAMAS
+  year: 2019
+  id: aamas19
+  link: http://aamas2019.encs.concordia.ca/
+  deadline: "2018-11-12 23:59:00"
+  timezone: Etc/UTC-12
+  date: May 13-17, 2019
+  place: Montreal, Canada
   sub: ML
 
+- name: CVPR
+  year: 2019
+  id: cvpr19
+  link: http://cvpr2019.thecvf.com/
+  deadline: "2018-11-16 23:59:59"
+  timezone: America/Los_Angeles
+  date: June 15-21, 2019
+  place: Long Beach, California
+  sub: CV
+
+- name: ESANN
+  year: 2019
+  id: esann19
+  link: https://www.elen.ucl.ac.be/esann/index.php?pg=welcome
+  deadline: "2018-11-19 23:59:59"
+  timezone: EST
+  date: April 24-26, 2019
+  place: Bruges, Belgium
+  sub: ML
+
+- name: IJCNN
+  year: 2019
+  id: ijcnn19
+  link: https://www.ijcnn.org/
+  deadline: "2018-12-15 23:59:59"
+  timezone: America/Los_Angeles
+  date: July 14-19, 2019
+  place: Budapest, Hungary
+  sub: ML
+
+- name: RSS
+  year: 2019
+  id: rss19
+  link: http://www.roboticsconference.org/
+  deadline: "2019-01-20 23:59:59"
+  timezone: Etc/GMT+12
+  date: June 22-26, 2018
+  place: Freiburg im Breisgau, Germany
+  sub: RO
+
+- name: NIPS
+  year: 2018
+  id: nips18
+  link: https://nips.cc/Conferences/2018
+  deadline: "2018-05-18 13:00:00"
+  timezone: America/Los_Angeles
+  date: December 3-8, 2018
+  place: "Palais des Congr\xE8s de Montr\xE9al, Montr\xE9al, Canada"
+  sub: ML
+
+- name: CoRL
+  year: 2018
+  id: corl2018
+  link: http://www.robot-learning.org/
+  deadline: "2018-06-15 17:00:00"
+  timezone: America/Los_Angeles
+  date: October 29-31, 2018
+  place: Zurich, Switzerland
+  sub: RO
